refactor(api): modularizar modulo de acesso e modernizar para Java 21
- Decompor God Classes AccessService (de 1.773 para 186 linhas) e AccessController (de 946 para 365 linhas) em Casos de Uso na camada de aplicacao (ProcessAccessRequestUseCase, RegisterCompanionUseCase, SelfRegistrationUseCase, ValidateAccessChallengeUseCase, GetCredentialsUseCase, etc.) e servicos puros de dominio (AccessWindowCalculator, DoctorAccessResolver, CpfValidator).
- Isolar a porta GestaoDsClientPort dos DTOs de infraestrutura atraves dos records GestaoDsPatient e GestaoDsAppointmentItem, zerando violacoes de regras do ArchUnit.
- Adotar recursos idiomaticos do Java 21 (Records, Text Blocks, Sequenced Collections, Pattern Matching e Virtual Threads).
- Ajustar fallback de extracao de CPF em documentos no FeegowPatientDetailsDto.
- Garantir 100% de cobertura e aprovacao em todos os 159 testes automatizados.